@@ -1,1 +1,2 @@
 DIST active_model_serializers-0.8.1.gem 37376 SHA256 cd7b1562f91f779955fc995ddbc8c1c92bbc62754670a859a7e91ea6e8a292a6 SHA512 44f149c692a3363e46adc1c11e185bbd22da02eced409f41bac10b62f867755896474fb3abf2f787eac9e79faa5ca7c5a8413552fae6c152418a6cf46fd83b54 WHIRLPOOL 6400164ac8c3289202f8c16678c20644c112df781d807aeb82dfc222950d59c0e9fd99624a5d10df0c04552eb53a59b97a3789ef6a4725d9945e88bbfb886b4d
+DIST active_model_serializers-0.8.2.gem 37376 SHA256 3f914ce24bc52dde294fb804e56ecb188acb2af92f3e05bce47d455e57c9b0a8 SHA512 460a2c509d0aab656cff88c356a78e9936f8c2560bcdc6c543157c8231590bc8f2fca25140909ab378838ab871f1688129a8dddbdb3ecedfe33c5c859973d2fc WHIRLPOOL f87b6654c57de4665dda084af236bfab84133c888674e63a17e466873b797f8c691dfbeae0f34eb2803f772467aa26d125551e6c7164a1a8cf392bae00d39f7c
