@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*active_model_serializers-0.8.2 (11 Sep 2014)
+
+  11 Sep 2014; Hans de Graaff <graaff@gentoo.org>
+  +active_model_serializers-0.8.2.ebuild:
+  Version bump.
+
   26 May 2014; Hans de Graaff <graaff@gentoo.org>
   active_model_serializers-0.8.1.ebuild:
   Add ruby20, ruby21.
